--- a/0.1-an-introduction-to-yara/ail-training.tex
+++ b/0.1-an-introduction-to-yara/ail-training.tex
@@ -167,6 +167,7 @@
 	\item {\it The pattern matching swiss knife for malware researchers (and everyone else)};
 	\item It's an improved {\bf grep} to create pattern matching rule to search for {\bf strings}, {\bf binary patterns}, {\bf regular expressions};
 	\item A YARA rule can be contextualised with metadata and tags describing a specific set of pattern matching rules.
+	\item Easier definiton of conditions compared to regex.
 	\end{itemize}
 \end{frame}
 
@@ -204,6 +205,30 @@ yara disneyplus.yara -r /home/adulau/dataset/2021/09/01/
 	\end{lstlisting}
 	\end{itemize}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Searching in binaries}
+Binaries packed with UPX but made unusable by UPX -d by modifying the magic UPX string:
+  \begin{figure}[h]
+    \includegraphics[width=\textwidth]{images/unpack.png}
+  \end{figure}
+\end{frame}
+
+\lstset{language=Python}
+\begin{frame}[fragile]
+\frametitle{Searching in binaries}
+	\begin{lstlisting}
+rule torcryptomining
+{
+    strings:
+        $upx_erase = {(00 FF 99 41|DF DD 30 33)}
+    condition:
+	$upx_erase at 236
+}
+	\end{lstlisting}
+\end{frame}
+
+
 
 \end{document}
 
