chg: [yara] Added crossword solution

--- a/0.1-an-introduction-to-yara/ail-training.tex
+++ b/0.1-an-introduction-to-yara/ail-training.tex
@@ -281,11 +281,19 @@ $re3: /[a-zA-Z0-9_.%+-]+@[a-zA-Z0-9_.-]+\.[a-zA-Z]{2,4}/
 \begin{frame}[fragile]
 \frametitle{Fun with Regular Expressions}
 \texttt{https://regexcrossword.com/}
-
 \begin{center}
 \includegraphics[width=0.8\textwidth]{pics/crosswords}
 \end{center}
 \end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Fun with Regular Expressions}
+\texttt{https://regexcrossword.com/}
+\begin{center}
+\includegraphics[width=0.8\textwidth]{pics/crosswords-solved}
+\end{center}
+\end{frame}
+
 
 \begin{frame}
   \frametitle{Searching in binaries}
